--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "clsx": "https://esm.sh/clsx@^2.1.1",
     "xterm-addon-fit": "https://esm.sh/xterm-addon-fit@^0.8.0",
-    "xterm": "https://esm.sh/xterm@^5.3.0"
+    "xterm": "https://esm.sh/xterm@^5.3.0",
+    "path": "https://esm.sh/path@^0.12.7",
+    "express": "https://esm.sh/express@^5.2.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "url": "https://esm.sh/url@^0.11.4",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "helmet": "https://esm.sh/helmet@^8.1.0",
+    "compression": "https://esm.sh/compression@^1.8.1",
+    "morgan": "https://esm.sh/morgan@^1.10.1"
   }
 }
 </script>
