--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
     "vite": "https://esm.sh/vite@^7.3.1",
     "helmet": "https://esm.sh/helmet@^8.1.0",
     "compression": "https://esm.sh/compression@^1.8.1",
-    "morgan": "https://esm.sh/morgan@^1.10.1"
+    "morgan": "https://esm.sh/morgan@^1.10.1",
+    "http": "https://esm.sh/http@^0.0.1-security",
+    "ws": "https://esm.sh/ws@^8.19.0",
+    "ssh2": "https://esm.sh/ssh2@^1.17.0"
   }
 }
 </script>
