feat: Enhance terminal appearance and reliability
Updates the terminal theme with improved color contrast and a more visible cursor. Introduces JetBrains Mono font for a modern aesthetic. Includes a default window size and term type in PTY configuration, along with a keepalive interval for increased connection stability.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Nebula SSH</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@5.3.0/css/xterm.css" />
+    <!-- Load JetBrains Mono Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
+    
     <style>
       /* Custom Scrollbar for a sleeker look */
       ::-webkit-scrollbar {
@@ -21,6 +26,9 @@
       }
       ::-webkit-scrollbar-thumb:hover {
         background: #475569; 
+      }
+      body {
+        font-family: 'Inter', system-ui, sans-serif;
       }
     </style>
   <script type="importmap">
